# cicero

./: .envrc  .gitignore  .golangci.toml  Makefile.swagger  Procfile  README.md  action-lib.nix  all.go  api.go  api.yaml  book.toml  brain.go  builder.sh  cabal.project  deploy.cue  devShells.nix  devshell.toml  flake.nix  go.mod  go.sum  graph.go  invoker.go  lib.nix  loki.yaml  main.go  nix.go  overlay.nix  runners.nix  script.nix  show.go  swagger.yaml  treefmt.nix  treefmt.toml  tullia.nix  web.go  workflow.nix  workflows-lib.nix  workflows-nomad.nix
cicero-api/: CHANGELOG.md  cicero-api.cabal
cicero-api/cli/: Action.hs  Fact.hs  Invocation.hs  Main.hs  Run.hs
cicero-api/src/IOHK/Cicero/: API.hs
cicero-api/src/IOHK/Cicero/API/: Action.hs  Fact.hs  Invocation.hs  Run.hs  Run.hs-boot
cue.mod/: module.cue
db/: database.sqlite3  schema.sql
docs/: SUMMARY.md  cicero-evaluator-nix.md  cicero_swagger.go  docs.go  evaluation-and-execution-of-actions.md  facts-explained.md  how-to-deploy-cicero-remotely.md  how-to-include-external-actions.md  index.md  install-cicero.md  install-nix.md  installation.md  introduction.md  learn-nix.md  prerequisites.md  tullia-3.md  tullia-4.md  tullia-5.md  tullia.md  tutorial-1.md  tutorial-2.md  tutorial-3.md  tutorial-4.md  tutorial.md
handbook/: SUMMARY.md  cicero-evaluator-nix.md  install-nix.md  introduction.md  run-cicero.md  tullia-1.md  tullia-2.md  tullia-3.md  tullia-4.md  tullia-5.md
jobs/: cicero.cue  deploy.cue  dev.cue  handbook.cue  oom.cue  webhooks.cue
pkgs/: cicero.nix  gocritic.nix  gouml.nix  liftbridge.nix  (+5 more)
(+298 files in other folders)
