cabal-version:      3.4
name:               cicero-api
version:            0.1.0.0
author:             Shea Levy
maintainer:         shea.levy@iohk.io
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    IOHK.Cicero.API
    IOHK.Cicero.API.Action
  build-depends:
    base ^>= 4.16.0.0,
    text ^>= 1.2.5.0,
    aeson ^>= 2.0.3.0,
    containers ^>= 0.6.5.1,
    time ^>= 1.11.1.1,
    uuid ^>= 1.3.15,
    servant ^>=0.19
  hs-source-dirs:   src
