cabal-version:      3.4
name:               cicero-api
version:            0.1.0.0
author:             Shea Levy
maintainer:         shea.levy@iohk.io
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    IOHK.Cicero.API
    IOHK.Cicero.API.Action
    IOHK.Cicero.API.Fact
  build-depends:
    base ^>= 4.16.0.0,
    bytestring ^>= 0.11.1.0,
    binary ^>= 0.8.9.0,
    text ^>= 1.2.5.0,
    aeson ^>= 2.0.3.0,
    containers ^>= 0.6.5.1,
    time ^>= 1.11.1.1,
    uuid ^>= 1.3.15,
    servant ^>=0.19
  hs-source-dirs:   src

executable cicero-cli
  main-is: Main.hs
  other-modules: Fact, Action
  hs-source-dirs: cli
  build-depends:
    base ^>= 4.16.0.0,
    bytestring ^>= 0.11.1.0,
    attoparsec ^>= 0.14.4,
    servant-client-core ^>= 0.19,
    servant-client ^>= 0.19,
    optparse-applicative ^>= 0.17.0.0,
    http-client-tls ^>= 0.3.6.1,
    aeson ^>= 2.0.3.0,
    http-client ^>= 0.7.11,
    unix ^>= 2.7.2.2,
    cicero-api
